Added jquery.min.js to index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<script></script>
+	<script src="assets/js/jquery.min.js"></script>
 </head>
 <body>
 	
