Changed title in index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Unit2 Lesson1 Assignment1</title>
 	<script src="assets/js/jquery.min.js"></script>
 </head>
 <body>
