--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Unit2 Lesson1 Assignment1</title>
+	<link rel="stylesheet" href="media/css/style.css">
 	<script src="assets/js/jquery.min.js"></script>
+	<script src="media/js/script.js"></script>
 </head>
 <body>
 	
