Practiced making link and script entries using emmet shortcut

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Unit2 Lesson1 Assignment1</title>
-	<link rel="stylesheet" href="media/css/style.css">
+	<link rel="stylesheet" type="text/css" href="media/css/style.css">
 	<script src="assets/js/jquery.min.js"></script>
-	<script src="media/js/script.js"></script>
+	<script type="text/javascript" src="media/css/script.js"></script>
 </head>
 <body>
 	
