--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Unit2 Lesson1 Assignment1</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<script src="assets/js/jquery.min.js"></script>
-	<script type="text/javascript" src="assets/css/script.js"></script>
+	<script type="text/javascript" src="assets/js/script.js"></script>
 </head>
 <body>
 	
