--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Unit2 Lesson1 Assignment1</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery-latest.min.js"></script>
 	<script type="text/javascript" src="assets/js/script.js"></script>
 </head>
 <body>
